--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "type": "module",
   "name": "pc-control",
-  "version": "1.0.0",
-  "main": "pc-control.js",
-  "dependencies": {
-    "wol": "^1.0.6"
+  "version": "2.0.0",
+  "author": "Ovidiu Pruteanu",
+  "license": "ISC",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -12,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/ovidiupruteanu/pc-control/issues"
   },
-  "homepage": "https://github.com/ovidiupruteanu/pc-control"
+  "homepage": "https://github.com/ovidiupruteanu/pc-control",
+  "dependencies": {
+    "node-ssdp": "^4.0.1",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/node-ssdp": "^4.0.1",
+    "@types/uuid": "^8.3.1"
+  }
 }
