--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   },
   "homepage": "https://github.com/ovidiupruteanu/pc-control",
   "dependencies": {
+    "axios": "^0.24.0",
+    "minimist": "^1.2.5",
     "node-ssdp": "^4.0.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "win-audio": "^2.0.2"
   },
   "devDependencies": {
+    "@types/minimist": "^1.2.2",
     "@types/node-ssdp": "^4.0.1",
     "@types/uuid": "^8.3.1"
   }
