--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "axios": "^0.24.0",
     "minimist": "^1.2.5",
     "node-ssdp": "^4.0.1",
+    "node-windows": "^1.0.0-beta.8",
     "uuid": "^8.3.2",
     "win-audio": "^2.0.2"
   },
   "devDependencies": {
     "@types/minimist": "^1.2.2",
     "@types/node-ssdp": "^4.0.1",
-    "@types/uuid": "^8.3.1"
+    "@types/uuid": "^8.3.1",
+    "@types/node-windows": "^0.1.2"
   }
 }
