--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "minimist": "^1.2.5",
     "node-ssdp": "^4.0.1",
     "node-windows": "^1.0.0-beta.8",
-    "uuid": "^8.3.2",
-    "win-audio": "^2.0.2"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/minimist": "^1.2.2",
